--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horisen - Search Engine Optimization</title>
 </head>
 
 <body>
+   
     <!--header begin-->
-    <div class="header">
+    <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
@@ -24,8 +25,14 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </header>
+    <!--header end-->
+
+    <!--hero begin-->
     <div class="hero"></div>
+    <!--hero end-->
+
+    <!--main body begin-->
     <div class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
@@ -49,6 +56,9 @@
             </p>
         </div>
     </div>
+    <!--main body end-->
+
+    <!--side bar begin-->
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -72,12 +82,16 @@
             </p>
         </div>
     </div>
-    <div class="footer">
+    <!--side bar end-->
+
+    <!--footer begin-->
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
+    <!--footer end-->
 </body>
 
 </html>
